--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,9 @@
         <!-- needs images, font... therefore can not be part of ui.css -->
         <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
         <link rel="stylesheet" href="bower_components/weather-icons/css/weather-icons.min.css">
+        <link rel="stylesheet" href="styles/estilotemp.css">
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
         <!-- end needs images -->
 
             <link rel="stylesheet" href="styles/main.css">
@@ -25,7 +28,7 @@
             <div data-ng-hide="isSpecificPage()" data-ng-cloak>
                 <section data-ng-include=" 'views/header.html' " id="header" class="top-header"></section>
 
-                <!--<aside data-ng-include=" 'views/nav.html' " id="nav-container"></aside> -->
+               <aside data-ng-include=" 'views/nav.html' " id="nav-container"></aside>
             </div>
 
             <div class="view-container">
@@ -39,5 +42,16 @@
         <script src="scripts/ui.js"></script>
 
         <script src="scripts/app.js"></script>
+		<script>
+			var dispositivo = navigator.userAgent.toLowerCase();
+			/*var esMovil=true;*/
+			var esMovil=false;
+			if( dispositivo.search(/iphone|ipod|ipad|android/) > -1 ){
+				esMovil=true;
+			}
+		</script>
+		<script type="text/javascript" src="scripts/funciones.js"></script>
+        
+                
     </body>
 </html>
