--- a/www/index.html
+++ b/www/index.html
@@ -26,13 +26,13 @@
 
         <div data-ng-controller="AppCtrl">
             <div data-ng-hide="isSpecificPage()" data-ng-cloak>
-                <section data-ng-include=" 'views/header.html' " id="header" class="top-header"></section>
+                <section data-ng-include=" 'views/header.html' " id="header" class="top-header" style="height:50px;"></section>
 
-               <aside data-ng-include=" 'views/nav.html' " id="nav-container"></aside>
+
             </div>
 
             <div class="view-container">
-                <section data-ng-view id="content" class="animate-fade-up"></section>
+                <section data-ng-view id="content" class="animate-fade-up" style="top:55px;"></section>
             </div>
         </div>
 
